[package]
name = "Recovery_Backup_Core"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10.0"
reqwest = { version = "0.12.9", features = ["stream","blocking"] }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.30"
tokio-util = "0.7.12"
base64 = "0.22.1"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
chrono = "0.4.38"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"

[profile.release]
opt-level = "s"
debug = 0